@@ -125,11 +125,6 @@ receive {
     }
 
     smtp {
-        # Strict command parsing. Enabling this is probably a bad idea, because
-        # people (sometimes including the authors of simta) are bad at RFC
-        # compliance.
-        strict = false;
-
         # <MSA|MTA|MTA_STRICT>
         # MSA mode will attempt to add missing headers to submitted messages.
         # MTA_STRICT will reject mail that fails RFC compliance checks.
